Fixed owner name section text-overflow issue in search columbarium and lot.

--- a/view/columbarium/searchColumbarium/searchColumbarium.css
+++ b/view/columbarium/searchColumbarium/searchColumbarium.css
@@ -92,3 +92,10 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
     font-weight: bold;
     padding: 2px 4px;
 }
+
+.owner-card-text{
+    height: 25px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
